--- a/src/resourse/views/layouts/main.hbs
+++ b/src/resourse/views/layouts/main.hbs
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/app.css">   <!--  ??? -->
     <title>{{title}}</title>
 </head>
 <body>
+    <h1>hello</h1>
     <div>
         {{>foo/header}}
     </div>
