form submit with post method

--- a/src/resourse/views/search.hbs
+++ b/src/resourse/views/search.hbs
@@ -1,1 +1,11 @@
-<input type="text" class="form-control">
+<div class="container w-50 border">
+    <form class="submit-form" method="POST" >
+    <label for="search">Search</label>
+    <input id="search" type="text" name="q" class="form-control" placeholder="Search...">
+    <select name="gender" id="">
+        <option value="male">Male</option>
+        <option value="female">Female</option>
+        <option value="other">Other</option>
+    </select>    <button class="btn btn-success">Submit</button>
+</form>
+</div>
