--- a/src/resourse/views/search.hbs
+++ b/src/resourse/views/search.hbs
@@ -1,4 +1,5 @@
 <div class="container w-50 border">
+    <h1>Search page</h1>
     <form class="submit-form" method="POST" >
     <label for="search">Search</label>
     <input id="search" type="text" name="q" class="form-control" placeholder="Search...">
