--- a/src/resourse/views/home.hbs
+++ b/src/resourse/views/home.hbs
@@ -1,3 +1,17 @@
 <h1>home page</h1>
-<div class="container">container</div>
-<input type="text">
+<div class="container ">
+ <div class="row">
+       {{#each courses}}
+       <div class="col-6">
+         <div class="card" >
+            <img src={{this.image}} class="card-img-top image" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">{{this.name}}</h5>
+                <p class="card-text">{{this.description}}</p>
+                <a href="#" class="btn btn-primary">Go to Course</a>
+            </div>
+        </div>
+       </div>
+      {{/each}}
+ </div>
+</div>
