--- a/src/resourse/sass/app.scss
+++ b/src/resourse/sass/app.scss
@@ -9,10 +9,6 @@ div{
     color: green;
 }
 
-.container{
-    // width: 200px;
-}
-
 .class{
     background-color: aliceblue;
     font-size: 20px;
@@ -22,4 +18,11 @@ div{
     width: 100%;      /* Fixed width */
     height: 200px;     /* Fixed height */
     object-fit: cover; /* Ensures images fill the box without distorting */
+  }
+
+
+.avatar{
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
   }
