--- a/src/resourse/views/courses/courseDetail.hbs
+++ b/src/resourse/views/courses/courseDetail.hbs
@@ -1,3 +1,5 @@
+    <link rel="stylesheet" href="css/app.css">   <!--  ??? -->
+
 <div class="row m-3">
     <div class="col-3">
     <button>Start learning</button>
