--- a/src/resourse/views/me/stored-courses.hbs
+++ b/src/resourse/views/me/stored-courses.hbs
@@ -18,9 +18,36 @@
       <td>{{this.createdAt}}</td>
       <td>
         <a href='/courses/{{this._id}}/edit' class="btn btn-link">Edit</a>
-        <a href="">Delete</a>
+        <a class="btn btn-link delete-btn"  data-toggle="modal" data-target="#del-course" data-id={{this._id}}>Delete</a>
         </td>
     </tr>
     {{/each}}
+    <div class="modal" role="dialog" id="del-course">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Delete Course</h5>
+          </div>
+          <div class="modal-body">
+            <p>Do you want to delete this course</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger del-confirm" >Delete</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <form name="del-form" method="POST"></form>
+    <script>
+      document.querySelector('.del-confirm').addEventListener('click', function(){
+        const courseId = document.querySelector('.delete-btn').getAttribute("data-id")
+        const delForm = document.forms['del-form']
+        delForm.action = `/courses/${courseId}?_method=DELETE`
+        delForm.submit()
+      })
+    </script>
   </tbody>
 </table>
+
+
